--- a/example/package.json
+++ b/example/package.json
@@ -25,7 +25,7 @@
     "express": "~4.12.3",
     "express-session": "^1.11.3",
     "kurento-client": "5.1.0",
-    "kurento-group-call": "0.0.1",
+    "kurento-group-call": "git@github.com:codeda/kurento-group-call.git#0.0.3",
     "waitfor": "^0.1.3"
   },
   "devDependencies": {
